--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,7 +7,7 @@
     <title>NodeJS</title>
 </head>
 <body>
-    <h1><%= user %></h1>
+    <h1>Hello username</h1>
     <form method="POST">
       <input name="username" type="text"/>
       <button type="submit">Send</button>
